enable uart dma support but not work
Signed-off-by: jeck.chen <jeck.chen@dbappsecurity.com.cn>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     User/Src/drivers/base/driver.c
     User/Src/drivers/tty/tty.c
     User/Src/drivers/tty/stm32h7_uart.c
+    User/Src/shell/shell.c
 )
 
 # Add include paths
